@@ -6,19 +6,33 @@ package org.apache.commons.lang3;
 public class CharUtils {
 
     /**
-     * <p>Converte il carattere in un oggetto Character.</p>
-     * <p>Per i caratteri ASCII a 7 bit, utilizza una cache che restituirà lo stesso oggetto Character ogni volta.</p>
+     * The cache of characters. We cache the commonly used ASCII 7-bit characters.
+     */
+    private static final Character[] CHAR_CACHE = new Character[128];
+
+    static {
+        for (char c = 0; c < CHAR_CACHE.length; c++) {
+            CHAR_CACHE[c] = new Character(c);
+        }
+    }
+
+    /**
+     * <p>Convierte el carácter a un objeto "Character".</p>
+     * <p>Para caracteres ASCII de 7 bits, utiliza una caché que devolverá el mismo 
+     * objeto "Character" cada vez.</p>
+     *
      * <pre>
      * CharUtils.toCharacterObject(' ')  = ' '
      * CharUtils.toCharacterObject('A')  = 'A'
      * </pre>
-     * @param ch  il carattere da convertire
-     * @return un oggetto Character del carattere specificato
+     *
+     * @param ch el carácter a convertir
+     * @return un objeto "Character" del carácter especificado
      */
     public static Character toCharacterObject(final char ch) {
-        if (ch < 128) {
-            return Character.valueOf(ch);
+        if (ch < CHAR_CACHE.length) {
+            return CHAR_CACHE[ch];
         }
-        return new Character(ch);
+        return Character.valueOf(ch);
     }
 }
